added camera input

--- a/diffusion_policy/config/task/simple_task.yaml
+++ b/diffusion_policy/config/task/simple_task.yaml
@@ -1,12 +1,12 @@
 name: simple_task
 
-obs_dim: 7  # 3 (eef_pos) + 3 (eef_rot) + 1 (gripper_width)
-action_dim: 7  # 3 (eef_pos) + 3 (eef_rot) + 1 (gripper_width)
+obs_dim: 3  # 3 joint positions
+action_dim: 3  # 3 joint positions
 keypoint_dim: 2
 
 dataset:
   _target_: diffusion_policy.dataset.simple_task_lowdim_dataset.SimpleTaskLowdimDataset
-  dataset_path: /home/sulab1/Workspace/jerry/diffusion/data/simple_task.zarr.zip
+  dataset_path: /home/sulab1/Workspace/jerry/diffusion/data/joint_positions_dataset.zarr.zip
   horizon: ${horizon}
   pad_before: ${eval:'${n_obs_steps}-1+${n_latency_steps}'}
   pad_after: 15  # Fixed to make total 32 (divisible by 8 for UNet)
