--- a/diffusion_policy/config/train_simple_task.yaml
+++ b/diffusion_policy/config/train_simple_task.yaml
@@ -37,13 +37,14 @@ policy:
     cond_predict_scale: True
   
   noise_scheduler:
-    _target_: diffusers.schedulers.scheduling_ddpm.DDPMScheduler
-    num_train_timesteps: 100
+    _target_: diffusers.DDIMScheduler
+    num_train_timesteps: 50
     beta_start: 0.0001
     beta_end: 0.02
     beta_schedule: squaredcos_cap_v2
-    variance_type: fixed_small
     clip_sample: True
+    set_alpha_to_one: True
+    steps_offset: 0
     prediction_type: epsilon
 
   horizon: ${horizon}
@@ -51,7 +52,7 @@ policy:
   action_dim: ${action_dim}
   n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_obs_steps: ${n_obs_steps}
-  num_inference_steps: 100
+  num_inference_steps: 16
   obs_as_local_cond: ${obs_as_local_cond}
   obs_as_global_cond: ${obs_as_global_cond}
   pred_action_steps_only: ${pred_action_steps_only}
